--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <div id="menu-container"></div>    
 
     <script>
-        src="script.js"
+        src="/static/script/script.js"
         function renderMenu() {
         const menuContainer = document.getElementById('menu-container');
         const products = getProducts();
