--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,14 @@
 <body>
     <header>
         <h1>Cardápio Online</h1>
+        <h1>Mesa {{.mesa}}</h1>
     </header>
-    <div id="menu-container"></div>    
+    <div id="menu-container"></div>
+    <div id="cart-container">
+        <h2>Carrinho</h2>
+        <ul id="cart-items"></ul>
+        <p id="cart-total-price"></p>
+    </div>
 
     <script>
         src="/static/script/script.js"
@@ -22,7 +28,7 @@
                 products.forEach(product => {
                     const menuItem = document.createElement('div');
                     menuItem.classList.add('menu-item');
-                    menuItem.innerHTML = `<h2>${product.name}</h2><p>R$ ${product.price.toFixed(2)}</p>`;
+                    menuItem.innerHTML = `<h2>${product.name}</h2><p>R$ ${product.price.toFixed(2)}</p><button onclick="addToCart('${product.name}', ${product.price})">Adicionar ao Carrinho</button>`;
                     menuContainer.appendChild(menuItem);
                 });
             }).catch(error => {
@@ -48,6 +54,46 @@
             });
         });
     }
+        
+
+        function addToCart(name, price) {
+            const cartItem = { name, price };
+            cartItems.push(cartItem);            
+            updateCart();
+            updatePrice();
+        }
+
+
+        function updateCart() {
+            cartItemList.innerHTML = "";
+
+            cartItems.forEach(item => {
+                const cartItem = document.createElement("li");
+                cartItem.innerHTML = `${item.name} - R$ ${item.price.toFixed(2)}`;
+                cartItemList.appendChild(cartItem);
+            });
+        }
+
+
+        function updatePrice() {            
+            //cartTotalPrice.innerHTML = "";
+
+            /*for (let i = 0; i < cartItems.length; i++) {
+                const item = cartItems[i];
+                totalPrice += item.price;
+            }*/
+            let lastItem = cartItems.slice(-1);
+            console.log(lastItem);
+            totalPrice += lastItem.price;
+            console.log(totalPrice);
+            cartTotalPrice.innerHTML = `Total R$ ${totalPrice.toFixed(2)}`;
+        }
+
+        const cartItemList = document.getElementById('cart-items');
+        const cartTotalPrice = document.getElementById('cart-total-price');
+
+        let cartItems = [];
+        let totalPrice = 0
         window.onload = renderMenu;
     </script>
 </body>
